# mercury

./: Cargo.toml  EVENTS.md  README.md  SLIDEDECK.md  TODO.md
orbital/: Cargo.toml
orbital/boot/: Cargo.toml
orbital/boot/src/: main.rs
orbital/broker/: Cargo.toml
orbital/broker/src/: lib.rs
orbital/camera/: .gitignore  Cargo.toml
orbital/camera/src/: lib.rs
orbital/logging/: Cargo.toml
orbital/logging/src/: lib.rs
orbital/public/kernel/: _testapp_unused.js  boot.js  common.js  runner.js  view.js
orbital/scripting/: Cargo.toml
orbital/scripting/src/: lib.rs
orbital/tensor/: Cargo.toml
orbital/tensor/src/: lib.rs
orbital/timer/: Cargo.toml
orbital/timer/src/: lib.rs
orbital/unused/: view_pixels.rs
orbital/view_nannou/: Cargo.toml
orbital/view_nannou/src/: lib.rs
orbital/wasm/: Cargo.toml
public/: boot.js  testapp.js
public/kernel/: boot.js  common.js  runner.js  view.js
public/libs/: common.js  runner.js  view.js
src/: broker.rs  camera.rs  logging.rs  main.rs  scripting.rs  tensor.rs  test.rs  timer.rs  view_egui.rs  view_nannou.rs  wasm.rs
src/services/: broker.rs  camera.rs  logging.rs  manifest.rs  scripting.rs  tensor.rs  timer.rs  view_dotrix.rs  view_nannou.rs  wasm.rs
