[package]
name = "oct18test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
rand = "0.8.4"
rusty_v8 = "0.32.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
lazy_static = "1.4.0"
once_cell = "1.8.0"