[package]
name = "orbital"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]

crossbeam = "0.8.1"
rand = "0.8.4"
rusty_v8 = "0.32.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
lazy_static = "1.4.0"
once_cell = "1.8.0"


# egui = "0.15.0"
# winit = "0.25.0"
# winit_input_helper = "0.10.0"
# env_logger = "0.9.0"
# dotrix = { git = "https://github.com/lowenware/dotrix.git" }
# pixels = "0.7.0"


broker = { path = "../broker" }
logging = { path = "../logging" }
scripting = { path = "../scripting" }
timer = { path = "../timer" }
wasm = { path = "../wasm" }
tensor = { path = "../tensor" }
camera = { path = "../camera" }
view_nannou = { path = "../view_nannou" }
